@@ -19,7 +19,10 @@ install-exec-hook:
 
 # pkglibexecdir and pkgdatadir are removed in the top level Makefile's uninstall
 uninstall-local:
-	rm -fr $(DESTDIR)$(pkgdatadir)/*
+	for i in $(srcdir)/xml/*.awk ; do \
+		progname=`echo $$i | sed 's;.*/;;'` ; \
+		rm -f $(DESTDIR)$(pkgdatadir)/$$progname ; \
+	done
 	rm -f $(DESTDIR)$(bindir)/xmlgawk
 
 clean-local:
